--- a/package.json
+++ b/package.json
@@ -28,6 +28,15 @@
     "watch": "yarn run build:js::dev -- --watch"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.6",
+    "@codemirror/autocomplete": "^6.18.6",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/language": "^6.11.1",
+    "@codemirror/lint": "^6.8.5",
+    "@codemirror/search": "^6.5.11",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.37.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.3",
@@ -35,6 +44,9 @@
     "@mui/material": "^5.15.3",
     "@mui/styles": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.7",
+    "@uiw/codemirror-theme-vscode": "^4.23.13",
+    "@uiw/react-codemirror": "^4.23.13",
+    "codemirror": "^6.0.2",
     "date-fns": "^2.25.0"
   },
   "devDependencies": {
