--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Automatically collapse generated files
-poetry.lock linguist-generated=true
+uv.lock linguist-generated=true
 yarn.lock linguist-generated=true
